src/objects/Invoice_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Invoice_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Merchandise__c</fullName>
        <label>Merchandise</label>
        <referenceTo>Merchandise__c</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Invoice_Line_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <description>Quantity__c  *  Unit_Price__c</description>
        <formula>Quantity__c  *  Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Invoice Line Item</label>
    <nameField>
        <displayFormat>ILI-{0000}</displayFormat>
        <label>Invoice Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validation_rule_Quantity</fullName>
        <active>true</active>
        <description>Добавить Validation rule чтобы нельзя было в заказе сделать Quantity больше чем есть на складе, проверить на созданных рекордах</description>
        <errorConditionFormula>Quantity__c  &gt;  Merchandise__r.Quantity__c</errorConditionFormula>
        <errorMessage>No enough Quantity of Merchandises</errorMessage>
    </validationRules>
</CustomObject>